--- a/Manipulando DOM/css/style.css
+++ b/Manipulando DOM/css/style.css
@@ -1,6 +1,9 @@
+/* Importa a fonte 'Robot Mono' da Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
+
 html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 18px;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 16px;
 }
 
 body {
@@ -14,6 +17,27 @@ body {
 .container {
     width: 80%;
     margin: auto;
-    padding: 25px 35px 45px;
+    padding: 25px 35px 100px;
     background-color: #f9f9f9;
+}
+
+img {
+    width: 350px;
+    height: 230px;
+}
+
+.box {
+    width: 100px;
+    padding: 50px;
+    font-weight: 700;
+    text-align: center;
+    background-color: #ff7f50;
+}
+
+hr {
+    margin: 75px 0 45px;
+}
+
+input, button {
+    font-size: 1rem;
 }
