--- a/Manipulando DOM/css/style.css
+++ b/Manipulando DOM/css/style.css
@@ -41,3 +41,9 @@ hr {
 input, button {
     font-size: 1rem;
 }
+
+#display {
+    text-align: right;
+    font-family: Consolas, monospace;
+    font-size: 1.5rem;
+}
