--- a/6. Login Animado - CSS e JS/css/style.css
+++ b/6. Login Animado - CSS e JS/css/style.css
@@ -72,7 +72,7 @@ button {
     height: 55px;
     border: solid 10px;
     border-radius: 50%;
-    /* display: none; */
+    display: none;
 
     /* Cores */
     border-top-color: #008cff99;
@@ -88,7 +88,10 @@ button {
     animation-iteration-count: infinite;
 }
 
-
+#notificacao {
+    text-align: center;
+    display: none;
+}
 
 /* Animações */
 @keyframes slide {
